--- a/src/pages/update-item/update-item.html
+++ b/src/pages/update-item/update-item.html
@@ -47,5 +47,5 @@
               <ion-radio value="Low"></ion-radio>
           </ion-item>
         </ion-list>
-        <button ion-button color="dark" (click)="addToDo()" start>Add</button>
+        <button  ion-button color="dark" (click)="updateToDo(itemDescription)" start>Update</button>
 </ion-content>
